@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.125 2005/04/03 03:03:42 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.126 2005/04/03 03:56:45 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   2 Apr 2005; Preston Cody <codeman@gentoo.org>
-  fixed the way set_timezone works.
+  fixed the way set_timezone works.  added hotplug/coldplug for livecd-kernel
+  added --emptytree to stage2.
   
   31 Mar 2005; Preston Cody <codeman@gentoo.org>
   Fixed indent problem in GLICController
